Added missing nodemailer module reference

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonfile": "^2.2.3",
     "lodash": "^4.3.0",
     "moment": "^2.11.2",
+    "nodemailer": "^2.3.0",
     "promise-ftp": "^1.2.13",
     "promise-ftp-common": "^1.1.5"
   }
